--- a/index.html
+++ b/index.html
@@ -75,5 +75,8 @@
                 </div>
                 </div>
         <script src="script.js"></script>
+        <footer>
+            &copy;BiSWAJIT NAG
+        </footer>
 </body>
 </html>
